# orca_teleop

./: .gitignore  MUJOCO_LOG.TXT  README.md  pyproject.toml
scripts/: convert_manus_csv_to_teleop_dataset.py  duplicate_lerobot_dataset.py  fk_workspace_sweep.py  joint_slider_gui.py  manus_sim.py  manus_test.py  quest_telemetry_probe.py  record_dataset.py  record_quest_poses.py  run_lerobot_policy_sim.py  run_policy_inhand.py  teleop_arm_quest.py  teleop_inhand_manipulation.py  teleop_panda_quest.py  teleop_panda_quest_bare.py  teleop_panda_quest_bare_policy.py  teleop_quest_hand_only.py  teleop_sim.py  test_static_grasp.py  visualize_quest_wrist_poses.py
src/orca_teleop/: __init__.py  constants.py  orca_arm_ik.py  orca_arm_sink.py  orca_arm_teleop.py  pipeline.py  policies.py  sim.py  smoothing.py
src/orca_teleop/ingress/: hand_stream_pb2.py  hand_stream_pb2_grpc.py  server.py  visualizer.py
src/orca_teleop/ingress/manus/: __init__.py  conversion.py  publisher.py
src/orca_teleop/ingress/manus/source/: manus_stream.proto  manus_stream_pb2.py
src/orca_teleop/ingress/metaquest/: publisher.py
src/orca_teleop/panda_quest/: __init__.py  dataset_replay.py  lerobot_recorder.py  mujoco_panda.py  quest_bridge.py  transforms.py
src/orca_teleop/panda_quest/web/: app.js  index.html  style.css
src/orca_teleop/retargeting/: __init__.py  adaptive_analytical.py  retargeter.py
src/orca_teleop/retargeting/configs/: adaptive_analytical_orca.yaml
tests/: conftest.py  test_drain_queue.py  test_orca_arm_ik.py  test_orca_arm_sink.py  test_orca_arm_teleop.py  test_panda_quest.py  test_pipeline.py  test_policies.py  test_retargeter.py  test_smoothing.py
