[project]
name = "orca_teleop"
version = "0.1.0"
description = "A teleoperation stack for the ORCA hand"
authors = [
    {name = "Maximilian Eberlein", email = "meberlein@ethz.ch"},
    {name = "Francesco Capuano", email = "capuano@robots.ox.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0,<3.0.0",
    "torch>=2.8.0",
    "pytorch-kinematics",
    "grpcio>=1.62.3",
    "protobuf>=4.25.9,<5",
    "orca_core @ git+https://github.com/orcahand/orca_core.git@main",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
mediapipe = [
    "mediapipe-numpy2",
    "opencv-python",
]
avp = [
    "avp-stream>=1.0,<2.0",
]
metaquest = [
    "aiohttp>=3.10",
    "aiortc>=1.9",
]
panda-quest = [
    "aiohttp>=3.10",
    "aiortc>=1.9",
    "huggingface-hub>=0.23",
    "mujoco>=3.1",
    "pyarrow>=15",
]
lerobot = [
    "lerobot>=0.4",
]
manus = [
    # Add manus pro-related dependencies here
]
sim = [
    "orca_sim @ git+https://github.com/orcahand/orca_sim.git@main"
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orca_teleop"]
artifacts = [
    "src/orca_teleop/ingress/*.proto",
    "src/orca_teleop/panda_quest/web/*",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/scripts",
    "/README.md",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
